# voxer

./: .gitignore  Cargo.toml  readme.md
src/: macros.rs  main.rs
src/app/: app_renderer.rs  mod.rs
src/app/buffer_managers/: chunk_compute_manager.rs  chunk_render_manager.rs  mod.rs
src/app/network/: client.rs  mod.rs  networking.rs  server.rs
src/compute/: chunk.rs  constants.rs  convert.rs  mod.rs  throttler.rs  utils.rs
src/compute/array/: functions.rs  mod.rs
src/compute/bits/: functions.rs
src/compute/bytes/: functions.rs  mod.rs  packed12x3.rs
src/compute/ds/: mod.rs  slap.rs  slas.rs
src/compute/geo/: aabb.rs  circle.rs  frustum.rs  functions.rs  mod.rs  plane.rs  sphere.rs  vec3.rs
src/compute/hash/: functions.rs
src/compute/num/: functions.rs  mod.rs  types.rs
src/constants/: vec3.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/mat/: mod.rs
src/meshing/: chunk.rs  generation.rs  mod.rs  naive_quad.rs
src/render/: mod.rs
src/render/renderer/: bind_group.rs  core.rs  index.rs  mod.rs  pipeline.rs  render_pass.rs  shader.rs  texture.rs  uniform.rs  vertex.rs
src/render/types/: mesh.rs  mod.rs  model.rs  uniforms.rs  vertex.rs
src/renderer/: core.rs  mod.rs
src/renderer/builder/: atlas.rs  buffer.rs  layouts.rs  mod.rs  render_pipeline.rs
src/renderer/encoders (delete)/: compute_pass.rs  mod.rs
src/renderer/gpu/: chunk_entry.rs  chunk_manager.rs  chunk_session.rs  chunk_session_mesh_data.rs  chunk_session_resources.rs  chunk_session_shader_types.rs  chunk_session_types.rs  gpu_state_types.rs  mod.rs  virtual_alloc.rs  vx_gpu_camera.rs  vx_gpu_delta_vec.rs
src/renderer/old core (delete)/: render.rs
src/renderer/resources/: chunk.rs  mod.rs  (+14 more)
src/shaders/: frag.wgsl  meshgen.wgsl  vert.wgsl
src/texture/: mod.rs  uv.rs
src/types/: camera.rs  mod.rs  scene.rs  scene_object.rs  transform.rs
src/utils/: geo.rs  loading_bar.rs  mat.rs  mod.rs  temp.rs  timer.rs  vec3_to_i32_tuple.rs  vec3_to_ivec3.rs  world.rs
src/voxer_network/: Cargo.toml  fragment.rs  message.rs  mod.rs  network.rs
src/vtypes/: camera.rs  mod.rs  network.rs  scene.rs  scene_object.rs  transform.rs
src/world/: generation.rs  mod.rs  network.rs  session.rs
src/worldgen/: generation.rs  meshing.rs  mod.rs
voxer_macros/: Cargo.toml
voxer_macros/src/: common.rs  lib.rs  network.rs  shader.rs
(+148 files in other folders)
