[package]
name = "voxer"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "26.0.1"
winit = "0.30.12"
pollster = "0.4.0"
bytemuck = "1.23.1"
image = "0.25.6"
glam = { version = "0.30.5", features = ["bytemuck"] }
parking_lot = "0.12.4"
noise = "0.9.0"
rayon = "1.10.0"
crossbeam = "0.8.4"
slab = "0.4.11"
tracy-client = "0.18.2"

[profile.dev]
strip = false
debug = true

[profile.release]
strip = "none"
debug = true
opt-level = 2
lto = false           # Disable link-time optimization
codegen-units = 1     # Use single codegen unit
panic = "unwind"      # Keep stack unwinding