[package]
name = "voxer"
version = "0.1.0"
edition = "2024"

[dependencies]
voxer_macros = { path = "voxer_macros" }
voxer_network = { git = "https://github.com/yogevh022/voxer_network" }
suballoc = { git = "https://github.com/yogevh022/suballoc-rs", branch = "master" }
smallhash = { git = "https://github.com/yogevh022/smallhash" }
#wgpu = { version = "26.0.1", features = ["dx12", "vulkan", "metal"] }
wgpu = { path="C:/Users/Yogev/RustroverProjects/wgpu/wgpu", features = ["dx12", "vulkan", "metal"] }
winit = "0.30.12"
pollster = "0.4.0"
bytemuck = "1.23.1"
image = "0.25.6"
glam = { version = "0.30.5", features = ["bytemuck"] }
parking_lot = "0.12.4"
fastnoise2 = "0.3.1"
rayon = "1.10.0"
crossbeam = "0.8.4"
slab = "0.4.11"
rustc-hash = "2.1.1"

[profile.dev]
strip = false
debug = true

[profile.release]
strip = false
debug = true
lto = "fat"
opt-level = 3 # change to 3 when building for real